--- a/src/components/singleQuestion/singleQuestion.css
+++ b/src/components/singleQuestion/singleQuestion.css
@@ -1,23 +1,8 @@
-/* HEADER */
-/* .single_question_header {
-  width: 82.5%;
-  display: flex;
-  align-self: flex-start;
-  justify-content: center;
-  align-items: flex-start;
-  flex-basis: 45%;
-   height: 55%; 
-} */
-
-/* .single_question_header .add_question {
-  flex-basis: 40%;
-} */
 
 /* Single question header */
 .last_discussed {
    display: flex; 
    justify-content: flex-end; 
-   flex-basis: 25.5%; 
    font-style: italic; 
    align-items: center; 
   color: rgb(121, 121, 122);
@@ -77,11 +62,6 @@
   .app_top_section {
     border-bottom: 2px solid rgb(204, 211, 214);
   }
-  /* .single_question_header .add_question{
-    justify-content: space-between;
-    padding-right: 5%;
-    flex-basis: 85%;
-  } */
 
   /* Single question body */
   .single_question_row_left_item {
@@ -102,9 +82,6 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1200px){
    /* Single question header */
-   /* .single_question_header .add_question{
-    flex-basis: 53%;
-  } */
   .last_discussed {
     flex-basis: 40%;
     flex-grow: 1;
